# recommender-systems-social-network-analysis

./: .gitignore  README.md  pyproject.toml
data/: data.md
notebooks/: social-network-analysis.ipynb
