[project]
name = "recommender-systems-social-network-analysis"
version = "0.1.0"
description = "Linkedin social network link analysis performed for L4 recommender systems"
authors = [
    {name = "Ravindu Weerasinghe",email = "ravindutharuka2001@gmail.com"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "networkx (>=3.6.1,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
